# zarr-cast-value

./: zensical.toml
.github/: zizmor.yml
.github/workflows/: cd.yml  ci.yml  conventional-commits.yml  docs.yml
core/: Cargo.toml
core/benches/: conversions.rs
core/examples/: zarrs_integration.rs
core/src/: lib.rs
core/src/simd/: avx.rs  avx2.rs  generic.rs  mod.rs  wasm32.rs
docs/: design.md  index.md  python-api.md
python/: Cargo.toml  pyproject.toml
python/cast_value_rs/: __init__.py
python/src/: lib.rs
